Segunda parte sexto día Celia - Vacaciones, editar y eliminar clases tipo 3 filtrado de clases entrenadores y bonos